# clipboard_guardian

./: Cargo.toml  LICENSE.md  README.txt  build.rs
assets/: icon.icns
src/: clipboard.rs  clipboard_holder.rs  config.rs  gui.rs  helpers.rs  main.rs  system_tray.rs
