[package]
name = "clipboard_vanisher"
version = "0.1.0"
authors = ["sinasalek <sinasalek@gmail.com>"]
edition = "2018"

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]

[dependencies]
periodic = "0.1.1"
copypasta = "0.7.0"
confy = "0.4.0"
serde = { version = "1.0", features = ["derive"] }