[package]
name = "clipboard_guardian"
version = "0.1.0"
authors = ["sinasalek <sinasalek@gmail.com>"]
edition = "2018"

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]

[dependencies]
periodic = "0.1.1"
copypasta = "0.7.0"
confy = "0.4.0"
hotkey = "0.3.1"
clipboard-master = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
iui = "0.3"
exitcode = "1.1.2"
crossbeam = "0.7.3"